libfann (1.0.6) stable; urgency=low
	* Customize error output
	* Error checking when allocating memory
	* Debian package
	* RPM package
	* Added pkg-config
	* Deallocate correctly in case of an error
	* Renamed fann_get_error to fann_get_MSE (keeping old one for now)
	* Renamed fann_reset_error to fann_reset_MSE (keeping old one for now)
	* Rearanged some code for easy access by the newly created fann php module 
	
 -- Steffen Nissen <lukesky@diku.dk> 

libfann (1.0.5) stable; urgency=low
	* Added a new constructor
	* Added a callback function for output during training
	* Changed compile parameters for further performance
	* Error value not set to zero after training
	* Thanks to Evan Nemerson for some of these patches

 -- Steffen Nissen <lukesky@diku.dk>  Tue, 06 Jan 2004 20:51:34 +0100
	
libfann (1.0.4) stable; urgency=high
	* Bugfix concerning default activation function
	
 -- Steffen Nissen <lukesky@diku.dk>  Thu, 11 Dec 2003 12:42:41 +0100
	
libfann (1.0.3) stable; urgency=low
	* Added FANN_SIGMOID_STEPWISE activation function (faster)
	* Moved files around and altered some files for easyer benchmarking
	* Added a benchmark pdf file, benchmarking the new behavior.
	* Better compability with non gnu compilers (should work off the shelf)
	
 -- Steffen Nissen <lukesky@diku.dk>  Tue, 09 Dec 2003 23:30:45 +0100
	
libfann (1.0.2) stable; urgency=low
	* Added configure script
	* Moved files around, to make the transition to configure more easy
	* Removed other versions of documentation than pdf
	
 -- Steffen Nissen <lukesky@diku.dk>  Thu, 13 Nov 2003 11:06:47 +0100
	
libfann (1.0.1) stable; urgency=high
	* Bugfix concerning steepness parameter
	* Moved some files around
	* Added the changelog
	
 -- Steffen Nissen <lukesky@diku.dk>  3 Nov 2003
	
libfann (1.0) stable; urgency=high
	* Initial release of full functioning library
	
 -- Steffen Nissen <lukesky@diku.dk>  1 Nov 2003
	
